[BOTF-267] Issues with the main page wrap on login page (#258)
## [BOTF-267] Description
The login page is a no-scroll page. that was the issue, it was getting scroll.

--- a/src/style/scss/common.scss
+++ b/src/style/scss/common.scss
@@ -43,7 +43,16 @@ html {
    background-repeat: no-repeat;
    font-size: 14px;
    color: $text;
-   min-height: 100%;
+   min-height: 100vh;
+
+   body {
+      min-height: inherit;
+
+      main {
+         position: relative;
+         min-height: inherit;
+      }
+   }
 }
 
 .cursor-pointer {
